add third section

--- a/index.html
+++ b/index.html
@@ -32,21 +32,32 @@
             <div class="title">Some Random Information.</div>
             <div class="container">
                 <div class="card">
-                    <img src="https://cdn.pixabay.com/photo/2019/10/03/11/14/camp-4522970_640.jpg" alt="">
+                    <img src="https://cdn.pixabay.com/photo/2019/10/03/11/14/camp-4522970_640.jpg" alt="This is someone camping.">
                     <p>This is someone camping.</p>
                 </div>
                 <div class="card">
-                    <img src="https://cdn.pixabay.com/photo/2017/08/17/08/08/camp-2650359_640.jpg" alt="">
+                    <img src="https://cdn.pixabay.com/photo/2017/08/17/08/08/camp-2650359_640.jpg" alt="This is also someone camping.">
                     <p>This is also someone camping.</p>
                 </div>
                 <div class="card">
-                    <img src="https://cdn.pixabay.com/photo/2016/07/01/07/51/tent-1490599_640.jpg" alt="">
+                    <img src="https://cdn.pixabay.com/photo/2016/07/01/07/51/tent-1490599_640.jpg" alt="This is still someone camping.">
                     <p>This is still someone camping.</p>
                 </div>
                 <div class="card">
-                    <img src="https://cdn.pixabay.com/photo/2016/11/21/15/14/camping-1845906_640.jpg" alt="">
+                    <img src="https://cdn.pixabay.com/photo/2016/11/21/15/14/camping-1845906_640.jpg" alt="Don't worry, someone is still camping.">
                     <p>Don't worry, someone is still camping.</p>
                 </div>
+            </div>
+        </div>
+
+        <div class="third">
+            <div class="quote">Sometimes when I close my eyes, I can't see.</div>
+            <div class="author">-Someone</div>
+        </div>
+
+        <div class="fourth">
+            <div class="blue-box">
+                
             </div>
         </div>
 
