--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         </div>
 
         <div class="fourth">
-            <div class="blue-box">
-                
-            </div>
+            <div class="action">Call to action! It's time!</div>
+            <div class="sign-up">Sign up for our product by clicking on that button right over there!</div>
+            <button>Sign Up</button>
         </div>
 
     </div>
