--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
 
     <div class="body">
         <div class="first">
-            <div class="title">This Website is Awesome</div>
-            <div class="text">There is some shit that is supposed to go here. I should try to figure out how to limit lorem's character length in order to not have a whole paragraph but I don't really feel like it.</div>
-            <img src="https://cdn.pixabay.com/photo/2023/08/19/05/24/starry-sky-8199764_640.jpg" alt="Some badass camping" class="camping">
-            <button>Sign Up</button>
+            <div class="column">
+                <div class="first-title">This Website is Awesome</div>
+                <div class="text">There is some shit that is supposed to go here. I should try to figure out how to limit lorem's character length in order to not have a whole paragraph but I don't really feel like it.</div>
+                <button class="button">Sign Up</button>
+             </div>
+            <img class= "first-image" src="https://images.pexels.com/photos/176381/pexels-photo-176381.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Some badass camping" class="camping">
         </div>
 
         <div class="second">
-            <div class="title">Some Random Information.</div>
+            <div class="second-title">Some Random Information.</div>
             <div class="container">
                 <div class="card">
                     <img src="https://cdn.pixabay.com/photo/2019/10/03/11/14/camp-4522970_640.jpg" alt="This is someone camping.">
@@ -59,6 +61,10 @@
             <div class="action">Call to action! It's time!</div>
             <div class="sign-up">Sign up for our product by clicking on that button right over there!</div>
             <button>Sign Up</button>
+        </div>
+
+        <div class="footer">
+            Copyright Ⓒ Me 2023
         </div>
 
     </div>
