align the pictures and set title in some random info section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="body">
         <div class="first">
             <div class="column">
-                <div class="first-title">This Website is Awesome</div>
+                <div class="first-title">This website is awesome</div>
                 <div class="text">There is some shit that is supposed to go here. I should try to figure out how to limit lorem's character length in order to not have a whole paragraph but I don't really feel like it.</div>
                 <button class="button">Sign Up</button>
              </div>
@@ -31,7 +31,7 @@
         </div>
 
         <div class="second">
-            <div class="second-title">Some Random Information.</div>
+            <div class="second-title">Some random information.</div>
             <div class="container">
                 <div class="card">
                     <img src="https://cdn.pixabay.com/photo/2019/10/03/11/14/camp-4522970_640.jpg" alt="This is someone camping.">
