finish fourth section

--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@
         </div>
 
         <div class="fourth">
-            <div class="action">Call to action! It's time!</div>
-            <div class="sign-up">Sign up for our product by clicking on that button right over there!</div>
-            <button>Sign Up</button>
+            <div class="blue-box">
+                <div class="not-button">
+                    <div class="action">Call to action! It's time!</div>
+                    <div class="sign-up">Sign up for our product by clicking on that button right over there!</div>
+                </div>
+                    <button>Sign Up</button>
+            </div>
         </div>
 
         <div class="footer">
