take out unnecessary lines in .card and button and add border to images

--- a/index.html
+++ b/index.html
@@ -24,30 +24,30 @@
         <div class="first">
             <div class="column">
                 <div class="first-title">This website is awesome</div>
-                <div class="text">There is some shit that is supposed to go here. I should try to figure out how to limit lorem's character length in order to not have a whole paragraph but I don't really feel like it.</div>
+                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem necessitatibus ratione assumenda? Numquam minima pariatur ut saepe necessitatibus aperiam sit rerum quas laboriosam debitis atque, deleniti itaque fuga porro sapiente!</div>
                 <button class="button">Sign Up</button>
              </div>
             <img class= "first-image" src="https://images.pexels.com/photos/803226/pexels-photo-803226.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Some badass camping" class="camping">
         </div>
 
         <div class="second">
-            <div class="second-title">Some random information.</div>
+            <div class="second-title">This is People Camping</div>
             <div class="container">
                 <div class="card">
                     <img src="https://cdn.pixabay.com/photo/2019/10/03/11/14/camp-4522970_640.jpg" alt="This is someone camping.">
-                    <p>This is someone camping.</p>
+                    <p>This is someone camping</p>
                 </div>
                 <div class="card">
                     <img src="https://cdn.pixabay.com/photo/2017/08/17/08/08/camp-2650359_640.jpg" alt="This is also someone camping.">
-                    <p>This is also someone camping.</p>
+                    <p>This is also someone camping</p>
                 </div>
                 <div class="card">
                     <img src="https://cdn.pixabay.com/photo/2016/07/01/07/51/tent-1490599_640.jpg" alt="This is still someone camping.">
-                    <p>This is still someone camping.</p>
+                    <p>This is still someone camping</p>
                 </div>
                 <div class="card">
                     <img src="https://cdn.pixabay.com/photo/2016/11/21/15/14/camping-1845906_640.jpg" alt="Don't worry, someone is still camping.">
-                    <p>Don't worry, someone is still camping.</p>
+                    <p>Don't worry, someone is still camping</p>
                 </div>
             </div>
         </div>
