resize everything for full screen viewing

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem necessitatibus ratione assumenda? Numquam minima pariatur ut saepe necessitatibus aperiam sit rerum quas laboriosam debitis atque, deleniti itaque fuga porro sapiente!</div>
                 <button class="button">Sign Up</button>
              </div>
-            <img class= "first-image" src="https://images.pexels.com/photos/803226/pexels-photo-803226.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Some badass camping" class="camping">
+            <img class= "first-image" src="https://images.pexels.com/photos/803226/pexels-photo-803226.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Some badass camping" class="camping">
         </div>
 
         <div class="second">
