update text in first section and add picture to header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="header">
-        Header Logo
+        <img src="https://images.pexels.com/photos/45241/tent-camp-night-star-45241.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
         <ul class="links">
             <li>About</li>
             <li>Services</li>
@@ -23,8 +23,8 @@
     <div class="body">
         <div class="first">
             <div class="column">
-                <div class="first-title">This website is awesome</div>
-                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem necessitatibus ratione assumenda? Numquam minima pariatur ut saepe necessitatibus aperiam sit rerum quas laboriosam debitis atque, deleniti itaque fuga porro sapiente!</div>
+                <div class="first-title">Camping is awesome</div>
+                <div class="text">People like camping, right? Right! I know I do. When I first started this project I was looking forward to me camping trip in the mountains of Helen. I'd recommend going there to check it out and the town! Anyways, here is the stuff.</div>
                 <button class="button">Sign Up</button>
              </div>
             <img class= "first-image" src="https://images.pexels.com/photos/803226/pexels-photo-803226.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Some badass camping" class="camping">
